[project]
name = "intelligent-supply-chain"
version = "0.1.0"
description = "Open-source intelligent supply chain system (self-learning, end-to-end)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API & services
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Orchestration
    "prefect>=3.0.0",
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    # Vector store & embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Optimization
    "ortools>=9.10.0",
    # ML & forecasting
    "lightgbm>=4.0.0",
    "statsforecast>=1.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    # Data ingestion (APIs, scraping)
    "httpx>=0.27.0",
    "kaggle>=1.6.0",
    "feedparser>=6.0.0",
    "pytrends>=4.9.0",
    "praw>=7.7.0",
    "meteostat>=1.6.0",
    # Config & utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]
minio = [
    "minio>=7.2.0",
]
